--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,15 @@
   </head>
   <body>
     <div class="container-fluid text-center">
+      <p><strong>OMG! you will not believe me but...</strong></p>
+      <p id="excuse">My dog eat my homework</p>
+
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
       </p>
-
-      <p id="excuse">My dog eat my homework</p>
 
       <div class="fixed-bottom p-4">
         Made with ❤️ by
